--- a/webAPP/Pages/Shared/_Layout.cshtml
+++ b/webAPP/Pages/Shared/_Layout.cshtml
@@ -31,6 +31,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/get_cities">Cities</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/oom">Cause OOM</a>
+                        </li>
                     </ul>
                 </div>
             </div>
